--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
             background-color: #f8f9fa;
             padding: 12px 15px;
             font-weight: bold;
+            font-size: 8px;  /* Add this line */
             border-bottom: 1px solid #ddd;
             display: flex;
             flex-direction: column;
@@ -212,7 +213,7 @@
             color: #666;
         }
         .stats {
-            font-size: 14px;
+            font-size: 8px;
             color: #666;
             text-align: center;
         }
