--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSV Data Search - Large File Support</title>
-    <style>
+<style>
         * {
             box-sizing: border-box;
             font-family: Arial, sans-serif;
@@ -134,7 +134,7 @@
             background-color: #f8f9fa;
             padding: 12px 15px;
             font-weight: bold;
-            font-size: 8px;  /* Add this line */
+            font-size: 10px;
             border-bottom: 1px solid #ddd;
             display: flex;
             flex-direction: column;
@@ -163,12 +163,12 @@
             border-bottom: 1px solid #ddd;
             position: sticky;
             top: 0;
-            font-size: 14px;
+            font-size: 10px;
         }
         .results-table td {
             padding: 12px 8px;
             border-bottom: 1px solid #eee;
-            font-size: 14px;
+            font-size: 10px;
         }
         .results-table tr:hover {
             background-color: #f9f9f9;
@@ -212,8 +212,11 @@
             padding: 20px;
             color: #666;
         }
+        .results-header span:first-child {
+            font-size: 12px;
+        }
         .stats {
-            font-size: 8px;
+            font-size: 12px;
             color: #666;
             text-align: center;
         }
@@ -245,7 +248,7 @@
             border-radius: 2px;
         }
         
-        /* Mobile-specific improvements */
+        /* Mobile-specific improvements - MOVED TO VERY END */
         @media (max-width: 767px) {
             body {
                 padding: 5px;
@@ -263,9 +266,10 @@
             input {
                 padding: 14px;
             }
-            .results-table th, .results-table td {
+            table.results-table th, 
+            table.results-table td {
                 padding: 10px 6px;
-                font-size: 13px;
+                font-size: 8px;
             }
             .pagination button {
                 padding: 10px;
